--- a/templates/ai_chatbot.html
+++ b/templates/ai_chatbot.html
@@ -148,7 +148,7 @@
             }
 
             const div = document.createElement('div');
-            div.className = message ${role}-message;
+            div.className = `message ${role}-message`;
 
             const contentDiv = document.createElement('div');
             contentDiv.className = 'message-content';
@@ -166,7 +166,7 @@
         }
 
         function updateMessage(id, content) {
-            const target = document.querySelector([data-temp-id="${id}"]);
+            const target = document.querySelector(`[data-temp-id="${id}"]`);
             if (target) {
                 const contentDiv = target.querySelector('.message-content');
                 if (target.classList.contains('assistant-message')) {
@@ -269,16 +269,16 @@
 
             const div = document.createElement('div');
             div.className = 'chat-item';
-            div.innerHTML = 
+            div.innerHTML = `
                 <div class="chat-preview">${firstMessage.substring(0, 32)}${firstMessage.length > 32 ? '...' : ''}</div>
                 <small class="chat-time">Just now</small>
-            ;
+            `;
             div.onclick = () => loadChat(id);
             sidebar.insertBefore(div, sidebar.firstChild);
         }
 
         function loadChat(chatId) {
-            window.location.href = /ai_chatbot?chat_id=${chatId};
+            window.location.href = `/ai_chatbot?chat_id=${chatId}`;
         }
 
         function newChat() {
