--- a/static/styles.css
+++ b/static/styles.css
@@ -779,8 +779,9 @@ body {
     text-align: center;
 }
 
-header {
-    background-color: #007BFF; /* Blue color */
+/* Header */
+h1 {
+    background-color: #007BFF;
     color: white;
     padding: 15px;
     text-align: center;
@@ -789,6 +790,27 @@ header {
     z-index: 100;
     width: 100%;
     box-sizing: border-box;
+}
+
+
+/* Subheading */
+h2 {
+    font-size: 1.6rem;
+    margin-bottom: 1.5rem;
+    color: #555;
+}
+
+main {
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-bottom: 70px; /* Add padding to accommodate fixed input area */
 }
 
 .cta-buttons {
